--- a/styles.css
+++ b/styles.css
@@ -14,18 +14,21 @@ html, body {
     }
 .btn-disponivel {
   display: inline-block;
-  padding: 10px 20px;
-  background-color: #4caf50;
+  margin: 20px auto;
+  padding: 12px 24px;
+  background-color: #28a745;
   color: white;
   text-decoration: none;
-  font-weight: bold;
+  font-size: 16px;
   border-radius: 8px;
   transition: background-color 0.3s ease;
+  text-align: center;
 }
 
 .btn-disponivel:hover {
-  background-color: #388e3c;
+  background-color: #218838;
 }
+
 
     main {
       flex: 1;
